--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         <EditText
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:id="@+id/war"
+            android:id="@+id/etxtInput"
             android:inputType="number"
             android:textSize="18sp"
             android:hint="Fahrenheit"/>
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:id="@+id/home"
+            android:id="@+id/txtvResult"
             android:text="Celsius"
             android:textSize="18sp"
             />
