--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -38,19 +39,11 @@
             android:orientation="vertical">
 
             <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:padding="0dp"
                 android:id="@+id/btnSwap"
-                android:text="Swap"/>
-
-            <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtvEquivalenceSymbol"
-                android:inputType="numberDecimal|numberSigned"
-                android:textSize="18sp"
-                android:text=" = "/>
+                android:onClick="swapUnits"
+                android:text="Swap" />
 
         </LinearLayout>
 
